# advent_of_code_2020

./: .gitignore  aoc.opam  dune-project  jsrun.bash  makefile_template  ocamlday.bash  ocamlrun.bash  run.bash  start_day.bash  template.cpp  template.ml
day01/: dune  puzzle.ml  puzzle1.cpp  puzzle1.js  puzzle2.cpp  puzzle2.js
day02/: puzzle.ml  puzzle1.cpp  puzzle1.js  puzzle2.cpp  puzzle2.js
day03/: puzzle1.cpp  puzzle1.js  puzzle2.cpp  puzzle2.js
day04/: puzzle1.js
day05/: puzzle.js
day06/: puzzle.js
day07/: puzzle.js
day08/: puzzle.cpp  puzzle.js  puzzle_optimized.cpp
day09/: puzzle.cpp
day1/puzzle1/: puzzle1.cpp
day10/: puzzle.cpp  puzzle_dp.cpp
day11/: puzzle.cpp
day12/: puzzle.cpp  puzzle.py
day13/: puzzle.cpp
day14/: puzzle.cpp
day15/: puzzle.c  puzzle.cpp  puzzle.js
day16/: puzzle.js
day17/: puzzle.js  puzzle_better.js
day18/: dune  puzzle.ml
day19/: inputtext  puzzle.js  puzzle.ml
day20/: full_grid_bordered  full_grid_unbordered  puzzle.ml  try0  try1  try2  try3
day21/: cleaned  puzzle.cpp  puzzle.ml
day22/: puzzle.cpp
day23/: puzzle.cpp  puzzle_optimized.c  puzzle_optimized.cpp
day24/: puzzle.cpp
day25/: puzzle.cpp  puzzle_optimized.cpp
